// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InputFile > should render input file component > expected html 1`] = `
<div>
  <div
    class="space-y-2"
    id="input-file-test-id"
  >
    <label
      class="block"
      id="input-file-test-id-label"
    >
      <span
        class="font-semibold"
      >
        label test
      </span>
    </label>
    <input
      accept=""
      aria-labelledby="input-file-test-id-label"
      class="peer absolute -z-10 h-12 w-50 overflow-hidden opacity-0 sm:w-100"
      id="input-file-test-id-input"
      name="test"
      type="file"
    />
    <label
      class="block w-full cursor-pointer overflow-hidden rounded-lg border border-gray-500 px-3 py-2 whitespace-nowrap select-none peer-focus:border-blue-500 peer-focus:ring-1 peer-focus:ring-blue-500 peer-focus:outline-hidden sm:w-fit sm:pr-20 sm:pl-0 peer-disabled:pointer-events-none peer-disabled:bg-gray-100 peer-disabled:opacity-50"
      for="input-file-test-id-input"
    >
      <span
        class="mr-3 hidden rounded bg-slate-100 px-3 py-4 sm:inline"
      >
        input-file.choose-file
      </span>
      input-file.no-file
    </label>
  </div>
</div>
`;

exports[`InputFile > should render input file with error message > expected html 1`] = `
<div>
  <div
    class="space-y-2"
    id="input-file-test-id"
  >
    <label
      class="block"
      id="input-file-test-id-label"
    >
      <span
        class="font-semibold"
      >
        label test
      </span>
    </label>
    <p>
      <span
        aria-atomic="true"
        aria-live="assertive"
        class="inline-block max-w-prose border-l-2 border-red-600 bg-red-50 px-3 py-1"
        data-testid="input-error-test-id"
        id="input-file-test-id-error"
      >
        error message
      </span>
    </p>
    <input
      accept=""
      aria-errormessage="input-file-test-id-error"
      aria-invalid="true"
      aria-labelledby="input-file-test-id-label"
      class="peer absolute -z-10 h-12 w-50 overflow-hidden opacity-0 sm:w-100"
      id="input-file-test-id-input"
      name="test"
      type="file"
    />
    <label
      class="block w-full cursor-pointer overflow-hidden rounded-lg border px-3 py-2 whitespace-nowrap select-none peer-focus:ring-1 peer-focus:outline-hidden sm:w-fit sm:pr-20 sm:pl-0 peer-disabled:pointer-events-none peer-disabled:bg-gray-100 peer-disabled:opacity-50 border-red-500 peer-focus:border-red-500 peer-focus:ring-red-500"
      for="input-file-test-id-input"
    >
      <span
        class="mr-3 hidden rounded bg-slate-100 px-3 py-4 sm:inline"
      >
        input-file.choose-file
      </span>
      input-file.no-file
    </label>
  </div>
</div>
`;

exports[`InputFile > should render input file with help message > expected html 1`] = `
<div>
  <div
    class="space-y-2"
    id="input-file-test-id"
  >
    <label
      class="block"
      id="input-file-test-id-label"
    >
      <span
        class="font-semibold"
      >
        label test
      </span>
    </label>
    <input
      accept=""
      aria-describedby="input-file-test-id-help-secondary"
      aria-labelledby="input-file-test-id-label"
      class="peer absolute -z-10 h-12 w-50 overflow-hidden opacity-0 sm:w-100"
      id="input-file-test-id-input"
      name="test"
      type="file"
    />
    <label
      class="block w-full cursor-pointer overflow-hidden rounded-lg border border-gray-500 px-3 py-2 whitespace-nowrap select-none peer-focus:border-blue-500 peer-focus:ring-1 peer-focus:ring-blue-500 peer-focus:outline-hidden sm:w-fit sm:pr-20 sm:pl-0 peer-disabled:pointer-events-none peer-disabled:bg-gray-100 peer-disabled:opacity-50"
      for="input-file-test-id-input"
    >
      <span
        class="mr-3 hidden rounded bg-slate-100 px-3 py-4 sm:inline"
      >
        input-file.choose-file
      </span>
      input-file.no-file
    </label>
    <div
      class="block max-w-prose text-gray-500"
      data-testid="input-help"
      id="input-file-test-id-help-secondary"
    >
      help message
    </div>
  </div>
</div>
`;

exports[`InputFile > should render input file with required > expected html 1`] = `
<div>
  <div
    class="space-y-2"
    id="input-file-test-id"
  >
    <label
      class="block"
      id="input-file-test-id-label"
    >
      <span
        class="font-semibold"
      >
        label test
      </span>
       (
      input.required
      )
    </label>
    <input
      accept=""
      aria-labelledby="input-file-test-id-label"
      aria-required="true"
      class="peer absolute -z-10 h-12 w-50 overflow-hidden opacity-0 sm:w-100"
      id="input-file-test-id-input"
      name="test"
      required=""
      type="file"
    />
    <label
      class="block w-full cursor-pointer overflow-hidden rounded-lg border border-gray-500 px-3 py-2 whitespace-nowrap select-none peer-focus:border-blue-500 peer-focus:ring-1 peer-focus:ring-blue-500 peer-focus:outline-hidden sm:w-fit sm:pr-20 sm:pl-0 peer-disabled:pointer-events-none peer-disabled:bg-gray-100 peer-disabled:opacity-50"
      for="input-file-test-id-input"
    >
      <span
        class="mr-3 hidden rounded bg-slate-100 px-3 py-4 sm:inline"
      >
        input-file.choose-file
      </span>
      input-file.no-file
    </label>
  </div>
</div>
`;
